--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "nategood/httpful": "^0.2.20",
         "jms/job-queue-bundle": "^1.2",
         "pear/net_url2": "^2.2",
-        "voyagechinagroup/ssi_api": "1.0.2"
+        "voyagechinagroup/ssi_api": "1.0.2",
+        "misd/guzzle-bundle": "^1.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.1.0",
